<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">



    <TextView
        android:id="@+id/etAddMedicineId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etAddMedicineName"
        android:hint="@string/tvMedicineName"/>

    <ImageView
        android:id="@+id/ivAddMedicineImage"
        android:layout_width="385dp"
        android:layout_height="150dp"
        android:saveEnabled="false"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sAddMedicineTypes"></Spinner>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etAddMedicineDose"
        android:inputType="number"
        android:hint="@string/tvMedicineDose"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etAddMedicineTime"
        android:inputType="number"
        android:hint="@string/tvMedicineTime"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etAddMedicineDate"
        android:inputType="number"
        android:hint="@string/tvMedicineDate"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etAddMedicineRepitation"
        android:inputType="number"
        android:hint="@string/tvMedicineRepitation"/>

    <Button
        android:id="@+id/bAddMedicineAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addMedicine"/>

</LinearLayout>

