<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">



    <TextView
        android:id="@+id/etEditMedicineId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvMedicineName"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etEditMedicineName"
        android:hint="@string/tvMedicineName"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvMedicineImage"/>

    <ImageView
        android:id="@+id/ivEditMedicineImage"
        android:layout_width="385dp"
        android:layout_height="150dp"
        android:text="Add Image"
        android:saveEnabled="false"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvMedicineType"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sEditMedicineTypes"></Spinner>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvMedicineDose"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etEditMedicineDose"
        android:inputType="number"
        android:hint="Dose"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvMedicineTime"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etEditMedicineTime"
        android:inputType="number"
        android:hint="Time"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvMedicineDate"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etEditMedicineDate"
        android:inputType="number"
        android:hint="Date"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvMedicineRepitation"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etEditMedicineRepitation"
        android:inputType="number"
        android:hint="Repitation"/>

    <Button
        android:id="@+id/bEditMedicineUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/updateMedicine"/>

</LinearLayout>

